profile as on Sep 2024

--- a/index.html
+++ b/index.html
@@ -1,1 +1,119 @@
-Anurag's personal website.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Anurag Baidyanath - Resume</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            line-height: 1.6;
+        }
+        h1, h2 {
+            color: #333;
+        }
+        .contact-info {
+            margin-bottom: 20px;
+        }
+        .section {
+            margin-bottom: 20px;
+        }
+        .section h2 {
+            border-bottom: 2px solid #333;
+            padding-bottom: 5px;
+        }
+        .job-title {
+            font-weight: bold;
+        }
+        ul {
+            margin-top: 5px;
+        }
+    </style>
+</head>
+<body>
+
+    <h1>Anurag Baidyanath</h1>
+    <div class="contact-info">
+        <p>Email: [redacted]</p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/anuragbaidyanath" target="_blank">linkedin.com/in/anuragbaidyanath</a></p>
+        <p>Mobile: [redacted]</p>
+    </div>
+
+    <div class="section">
+        <h2>Education</h2>
+        <p><strong>National Institute of Technology (NIT) Patna, India</strong><br>
+           B.Tech in Computer Science and Engineering; GPA: 9.19; Rank: 3 (July 2011 – May 2015)
+        </p>
+    </div>
+
+    <div class="section">
+        <h2>Experience</h2>
+
+        <p><span class="job-title">Engineering Manager</span> - Quinbay (a blibli company), Bengaluru, India (November 2022 - Present)</p>
+        <ul>
+            <li>Lead the development of hybrid search combining lexical search with vector search to increase relevance.</li>
+            <li>Developed a platform to measure and track search relevance using NDCG scores.</li>
+            <li>Reduced discrepancies between search and upstream data services by 25%.</li>
+            <li>Improved search API performance, reducing P95 response time by 35%.</li>
+        </ul>
+
+        <p><span class="job-title">Software Engineer 3</span> - Glovo, Barcelona, Spain (February 2022 - October 2022)</p>
+        <ul>
+            <li>Designed and developed the partners availability module for managing restaurant opening/closing times.</li>
+            <li>Re-architected the routing module for parcel delivery routes.</li>
+            <li>Designed and implemented the Proof of Delivery functionality for digital signatures.</li>
+        </ul>
+
+        <p><span class="job-title">Software Engineer</span> - JFrog, Bengaluru, India (June 2021 - January 2022)</p>
+        <ul>
+            <li>Integrated Atlassian JIRA, automating the creation of actionable security tickets.</li>
+            <li>Designed and developed the VCS scan feature for running vulnerability scans directly on VCS repositories.</li>
+        </ul>
+
+        <p><span class="job-title">Software Engineer 2</span> - Glovo, Barcelona, Spain (November 2020 - June 2021)</p>
+        <ul>
+            <li>Implemented return and exit flows for unsuccessful parcel deliveries.</li>
+            <li>Developed a parcel tracking interface allowing customers to adjust delivery dates.</li>
+        </ul>
+
+        <p><span class="job-title">Lead Software Engineer</span> - Bidgely, Bengaluru, India (Feb 2017 - August 2020)</p>
+        <ul>
+            <li>Designed a system to store utility consumption data in Amazon S3, leading to significant storage cost savings.</li>
+            <li>Architected a data-ingestion framework that processes 3 billion user records per day.</li>
+            <li>Developed a recommendation engine for personalized energy-saving tips.</li>
+            <li>Mentored engineers and served as an enterprise architect on 3 projects.</li>
+        </ul>
+
+        <p><span class="job-title">Software Engineer</span> - Snapdeal, Bengaluru, India (July 2015 - Feb 2017)</p>
+        <ul>
+            <li>Designed algorithms and APIs for displaying relevant ads on Snapdeal product pages.</li>
+            <li>Built a parallelized compute engine using Apache Spark to process a 4 million image catalog.</li>
+            <li>Implemented color search and filters for FindMyStyle.in using ElasticSearch.</li>
+        </ul>
+
+        <p><span class="job-title">Intern</span> - Indian Institute of Technology Bombay, Mumbai, India (May 2014 - July 2014)</p>
+        <ul>
+            <li>Developed a tech support portal for Aakash tablets, including forums and a ticketing system.</li>
+        </ul>
+    </div>
+
+    <div class="section">
+        <h2>Achievements</h2>
+        <ul>
+            <li>People’s Choice Award, Bidgely Hackathon: Built an AR experience for Home Energy Reports.</li>
+            <li>Snapdeal Gold Award for excellent performance.</li>
+            <li>2nd place in Algo-Z-Ripper coding event at NIT Patna.</li>
+        </ul>
+    </div>
+
+    <div class="section">
+        <h2>Programming Skills</h2>
+        <ul>
+            <li><strong>Languages:</strong> Java, Python, Go</li>
+            <li><strong>Technologies:</strong> Apache Spark, Apache Kafka, Solr, MySQL, Cassandra, GCP, AWS</li>
+        </ul>
+    </div>
+
+</body>
+</html>
